app/assets/stylesheets/pages/merge_requests.scss
/**
 * MR -> show: Automerge widget
 *
 */

$status-icon-size: 22px;
$status-icon-margin: $gl-btn-padding;

.space-children {
  @include clearfix;

  > * {
    float: left;
  }

  > *:not(:last-child) {
    margin-right: 10px;
  }
}

.mr-state-widget {
  color: $gl-text-color;
  border: 1px solid $border-color;
  border-radius: 2px;
  line-height: 28px;

  .mr-widget-heading,
  .mr-widget-section,
  .mr-widget-footer {
    padding: 16px;
    border-top: solid 1px $border-color;
  }

  .mr-widget-footer {
    padding: 0;
  }

  form {
    margin-bottom: 0;

    .clearfix {
      margin-bottom: 0;
    }
  }

  label {
    margin-bottom: 0;
  }

  .btn {
    font-size: 14px;

    &[disabled] {
      opacity: 0.3;
    }

    &.btn-xs {
      line-height: 1;
      padding: 5px 10px;
      margin-top: 1px;
    }

    &.dropdown-toggle {
      padding: 4px 10px;

      .fa {
        color: inherit;
      }
    }
  }

  .accept-merge-holder {
    .accept-action {
      display: inline-block;
      float: left;

      .accept-merge-request {
        &.ci-pending,
        &.ci-running {
          @include btn-blue;
        }

        &.ci-skipped,
        &.ci-failed,
        &.ci-canceled,
        &.ci-error {
          @include btn-red;
        }
      }
    }

    .accept-control {
      float: left;
      margin: 0;
      margin-left: 20px;
      padding: 5px;
      padding-top: 8px;
      line-height: 20px;

      &.right {
        float: right;
        padding-right: 0;
      }

      .modify-merge-commit-link {
        padding: 0;

        background-color: transparent;
        border: 0;

        color: $gl-text-color;

        &:hover,
        &:focus {
          text-decoration: underline;
        }
      }

      .merge-param-checkbox {
        margin: 0;
      }

      a .fa-question-circle {
        color: $gl-text-color-secondary;

        &:hover,
        &:focus {
          color: $link-hover-color;
        }
      }
    }
  }

  .ci-widget {
    color: $gl-text-color;
    display: flex;

    @media (max-width: $screen-xs-max) {
      flex-wrap: wrap;
    }
  }

  .mr-widget-icon {
    font-size: 22px;
    margin-right: $status-icon-margin;
  }

  .ci-status-icon svg {
    width: $status-icon-size;
    height: $status-icon-size;
    margin: 3px 0;
    position: relative;
    overflow: visible;
    display: block;
  }

  .mr-widget-body {
    @include clearfix;

    &.media > *:first-child {
      margin-right: 10px;
    }
  }

  .mr-widget-pipeline-graph {
    padding: 0 4px;

    .dropdown-menu {
      z-index: 300;
    }

    .ci-action-icon-wrapper {
      line-height: 16px;
    }
  }

  .normal {
    line-height: 28px;
  }

  .capitalize {
    text-transform: capitalize;
  }

  .label-branch {
    @extend .ref-name;

    color: $gl-text-color;
    font-weight: 600;
    overflow: hidden;
    margin: 0 3px;
    word-break: break-all;

    &.label-truncated {
      position: relative;
      display: inline-block;
      width: 250px;
      margin-bottom: -3px;
      white-space: nowrap;
      text-overflow: clip;
      line-height: 14px;

      &::after {
        position: absolute;
        content: '...';
        right: 0;
        font-family: $regular_font;
        background-color: $gray-light;
      }
    }
  }

  .js-deployment-link {
    display: inline-block;
  }

  .mr-widget-help {
    padding: 10px 16px 10px 48px;
    font-style: italic;
  }

  .mr-widget-body {
    h4 {
      float: left;
      font-weight: 600;
      font-size: 14px;
      line-height: inherit;
      margin-top: 0;
      margin-bottom: 0;

      &.has-conflicts .fa-exclamation-triangle {
        color: $gl-warning;
      }

      time {
        font-weight: normal;
      }
    }

    .btn-grouped {
      margin-left: 0;
      margin-right: 7px;
    }

    label {
      font-weight: normal;
    }

    .spacing {
      margin: 0 0 0 10px;
    }

    .bold {
      font-weight: 600;
      color: $gl-gray-light;
    }

    .state-label {
      font-weight: 600;
      padding-right: 10px;
    }

    .danger {
      color: $gl-danger;
    }

    .spacing,
    .bold {
      vertical-align: middle;
    }

    .dropdown-menu {
      li a {
        padding: 5px;
      }

      .merge-opt-icon,
      .merge-opt-title {
        display: inline-block;
        float: left;
      }

      .merge-opt-icon svg {
        height: 15px;
        width: 15px;
      }

      .merge-opt-title {
        margin-left: 8px;
      }
    }

    .dropdown-toggle {
      .fa {
        color: inherit;
      }
    }

    .has-custom-error {
      display: inline-block;
    }

    @media (max-width: $screen-xs-max) {
      p {
        font-size: 13px;
      }

      .btn-grouped {
        float: none;
        margin-right: 0;
      }

      .accept-action {
        width: 100%;
      }
    }

    .commit-message-editor {
      label {
        padding: 0;
      }
    }

    &.mr-widget-empty-state {
      line-height: 20px;

      .artwork {
        margin-bottom: $gl-padding;
      }

      .text {
        span {
          font-weight: 600;
        }

        p {
          margin-top: $gl-padding;
        }
      }
    }
  }

  .ci-coverage {
    float: right;
  }

  .stop-env-container {
    color: $gl-text-color;
    float: right;

    a {
      color: $gl-text-color;
    }
  }
}

.mr-state-widget .mr-widget-body {
  .approve-btn {
    margin-right: 5px;
  }
}

.mr_source_commit,
.mr_target_commit {
  margin-bottom: 0;

  .commit {
    margin: 0;
    padding: 10px;
    list-style: none;

    &:hover {
      background: none;
    }
  }
}

.commits-empty {
  text-align: center;

  h4 {
    padding-top: 20px;
    padding-bottom: 10px;
  }

  svg {
    width: 230px;
  }
}
/* ... */

